Fixed the pop-up body overflow probelm with the create buttons. Also added the file for the Task class

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,7 @@ html{
   max-width: 50vw;
   max-height: 50vh;
   min-width: 450px;
-  min-height: 350px;
+  min-height: 400px;
   padding: 3vh 2vw;
 }
 
